[package]
name = "timmy"
version = "0.3.0"
authors = ["Matthew Hall <matthew@quickbeam.me.uk>"]
description = "A time tracker mainly for programming tasks"
repository = "https://github.com/mattyhall/timmy"
license = "BSD-3-Clause"
keywords = ["application"]

[dependencies]
rusqlite = { version = "0.7.3", features = ["chrono"] }
clap = "2.10.0"
chrono = "0.2"
log = "0.3.6"
env_logger = "0.3.4"
ansi_term = "0.8"
regex = "0.1"
lazy_static = "0.2.1"
